# cryptoline

./: .gitignore  Dockerfile  LICENSE  README.CryptoLine.md  README.md  build.sh  ches2022_run_experiments_figure5.sh  ches2022_run_experiments_table3.sh  ches2022_run_experiments_table3_lite.sh  cryptoline-mode.el  cryptoline.install  cryptoline.opam  cv.ml  cv_cec.ml  cv_cli.ml  dune  dune-project  dune-workspace.dev  run_experiments  tches2022_run_experiments_figure5.sh  tches2022_run_experiments_table3.sh  verify.sh
absdom/: common.ml  common.mli  dune  floatabs.ml  std.ml  std.mli
aig/: aig.ml  aig.mli  aig_stubs.c  aig_stubs.h  compatibility.c  compatibility.h  dune  gen_compatibility_c.sh  gen_compatibility_h.sh
ast/: cryptoline.ml  cryptoline.mli  dune  get-config.sh  multiTrack.ml  multiTrack.mli  untypedCryptoline.ml  untypedCryptoline.mli
coqbb/: Ascii.ml  Ascii.mli  BBAdd.ml  BBAdd.mli  BBAnd.ml  BBAnd.mli  BBAshr.ml  BBAshr.mli  BBCommon.ml  BBCommon.mli  BBConcat.ml  BBConcat.mli  BBConj.ml  BBConj.mli  BBConst.ml  BBConst.mli  BBDisj.ml  BBDisj.mli  BBEq.ml  BBEq.mli  BBExtract.ml  BBExtract.mli  BBHigh.ml  BBHigh.mli  BBIte.ml  BBIte.mli  BBLneg.ml  BBLneg.mli  BBLow.ml  BBLow.mli  BBLshr.ml  BBLshr.mli  BBMul.ml  BBMul.mli  BBNeg.ml  BBNeg.mli  BBNot.ml  BBNot.mli  BBOr.ml  BBOr.mli  (+136 more)
doc/: cryptoline.tex  macro.tex  tutorial.tex
examples/FourQ/: fp2add1271.cl  fp2add1271.gas  fp2inv1271.cl  fp2inv1271.gas  fp2mul1271.cl  fp2mul1271.gas  fp2sqr1271.cl  fp2sqr1271.cl.old  fp2sqr1271.gas  fp2sqr1271.result1  fp2sub1271.cl  fp2sub1271.gas
examples/PQCrypto-SIDH/: fpx.c
examples/blst/: extract.c
examples/call_proc/: inline.cl  input_in_ouput.cl  modify.cl  readme.txt  simple_add.cl  two_function.cl  without_output.cl
examples/golang/: README.md  p256Mul.cl  p256Mul.gas  p256Mul.go
examples/kyber/: precomp.gp
examples/mbedtls-2.6.0/: mbedtls_mpi_mul_mpi_2limbs_00.cl  mbedtls_mpi_mul_mpi_2limbs_00.gas  mbedtls_mpi_mul_mpi_2limbs_01.cl  mbedtls_mpi_mul_mpi_2limbs_01.gas  mbedtls_mpi_mul_mpi_4limbs_0000.cl  mbedtls_mpi_mul_mpi_4limbs_0000.gas  mbedtls_mpi_mul_mpi_4limbs_00010.cl  mbedtls_mpi_mul_mpi_4limbs_00010.gas  mbedtls_mpi_mul_mpi_4limbs_000110.cl  mbedtls_mpi_mul_mpi_4limbs_000110.gas  mbedtls_mpi_mul_mpi_4limbs_0001110.cl  mbedtls_mpi_mul_mpi_4limbs_0001110.gas  mbedtls_mpi_mul_mpi_4limbs_00100.cl  mbedtls_mpi_mul_mpi_4limbs_00100.gas  mbedtls_mpi_mul_mpi_4limbs_001010.cl  mbedtls_mpi_mul_mpi_4limbs_001010.gas  mbedtls_mpi_mul_mpi_4limbs_0010110.cl  mbedtls_mpi_mul_mpi_4limbs_0010110.gas  mbedtls_mpi_mul_mpi_4limbs_00101110.cl  mbedtls_mpi_mul_mpi_4limbs_00101110.gas  mbedtls_mpi_mul_mpi_4limbs_001100.cl  mbedtls_mpi_mul_mpi_4limbs_001100.gas  mbedtls_mpi_mul_mpi_4limbs_0011010.cl  mbedtls_mpi_mul_mpi_4limbs_0011010.gas  mbedtls_mpi_mul_mpi_4limbs_00110110.cl  mbedtls_mpi_mul_mpi_4limbs_00110110.gas  mbedtls_mpi_mul_mpi_4limbs_001101110.cl  mbedtls_mpi_mul_mpi_4limbs_001101110.gas  mbedtls_mpi_mul_mpi_4limbs_01000.cl  mbedtls_mpi_mul_mpi_4limbs_01000.gas  mbedtls_mpi_mul_mpi_4limbs_010010.cl  mbedtls_mpi_mul_mpi_4limbs_010010.gas  mbedtls_mpi_mul_mpi_4limbs_0100110.cl  mbedtls_mpi_mul_mpi_4limbs_0100110.gas  mbedtls_mpi_mul_mpi_4limbs_01001110.cl  mbedtls_mpi_mul_mpi_4limbs_01001110.gas  mbedtls_mpi_mul_mpi_4limbs_010100.cl  mbedtls_mpi_mul_mpi_4limbs_010100.gas  mbedtls_mpi_mul_mpi_4limbs_0101010.cl  mbedtls_mpi_mul_mpi_4limbs_0101010.gas  (+12 more)
examples/newhope/: bitrev_vector.gas  cbd.gas  hr.gas  ntt_double.gas  pwmul_double.gas  rec.gas
examples/nss_mpi/: Makefile  nss_mpi.c  s_mp_mul_comba_16.gas  s_mp_mul_comba_32.gas  s_mp_mul_comba_4.gas  s_mp_mul_comba_8.gas  s_mpv_mul_add_vec64_16limbs.gas  s_mpv_mul_add_vec64_8limbs.gas  s_mpv_mul_set_vec64_16limbs.gas  s_mpv_mul_set_vec64_4limbs.gas  s_mpv_mul_set_vec64_8limbs.gas
examples/ntruhrss/: cbdS3.gas  poly_R2_mul.gas  poly_Rq_mul_xm1.gas  poly_Rq_to_S3.gas  poly_S3_mul.gas  poly_S3_to_Rq.gas  square_12_701.gas  square_15_701.gas  square_168_701.gas  square_1_701.gas  square_27_701.gas  square_336_701.gas  square_3_701.gas  square_42_701.gas  square_6_701.gas  square_84_701.gas
examples/openssl/: curve25519.c
examples/pascal-mont/: cut.py  run_me.sh
examples/pmp_farith/: gfp25519inv-x11x.cl  (+9 more)
main/: cec.ml  common.ml  common.mli  dune  std.ml  withCli.ml  withRedlog.ml
misc/: Dockerfile.apt  Dockerfile.mac.opam  Dockerfile.opam  README.md  cryptoline-mode.el  cryptoline.JSON-tmLanguage  lang-cryptoline.vsix  odoc.css
misc/cryptoline-vscode-extension/: README.md  cryptoline-1.0.0.vsix  package.json
misc/cryptoline-vscode-extension/syntaxes/: cryptoline.tmLanguage.json
nbits/: dune  extra.ml  extra.mli  extracted.ml  extracted.mli  nBits.ml  nBits.mli
options/: dune  std.ml  std.mli  withLwt.ml  withLwt.mli
parsers/: common.ml  common.mli  cryptolineLexer.mll  cryptolineParser.mly  dune  legacyCryptolineLexer.mll  legacyCryptolineParser.mly  specLexer.mll  specParser.mly  std.ml  std.mli  untypedCryptolineLexer.mll  untypedCryptolineParser.mly  vectorCryptolineLexer.mll  vectorCryptolineParser.mly
qfbv/: common.ml  common.mli  dune  std.ml  std.mli  withLwt.ml  withLwt.mli
scripts/: aarch64.rules  annot_unused_carries.py  annot_unused_variables.py  armv4.rules  clparse.py  cryptoline.py  cut_chains.py  install-abc.sh  install-aiger.sh  install-boolector.sh  install-singular.sh  itrace-x86_64.py  itrace.py  rv64.rules  test_parsing.sh  to_zdsl.py  update-build-environments  upgrade_cl.sh  x86_64.rules
sim/: command.ml  command.mli  commandLexer.mll  commandParser.mly  dune  simulator.ml  simulator.mli
typecheck/: dune  std.ml  std.mli
utils/: domainsTasks.ml  domainsTasks.mli  dune  float.ml  float.mli  graph.ml  graph.mli  hashset.ml  hashset.mli  std.ml  std.mli  tasks.ml  tasks.mli  utils.ml  utils.mli
verify/: cas.ml  cas.mli  common.ml  common.mli  deduce.ml  deduce.mli  dune  mip.ml  mip.mli  mix.ml  mix.mli  ppl.ml  rewrite.ml  rewrite.mli  smt.ml  smt.mli  std.ml  std.mli  tasks.ml  tasks.mli  withDomains.ml  withDomains.mli  withLwt.ml  withLwt.mli
(+1730 files in other folders)
