(library
  (name        parsers)
  (libraries   ast str typecheck)
)

; (ocamllex    legacyCryptolineLexer)
; (ocamlyacc   legacyCryptolineParser)
; (ocamllex    untypedCryptolineLexer)
; (ocamlyacc   untypedCryptolineParser)
; (ocamllex    vectorCryptolineLexer)
; (ocamlyacc   vectorCryptolineParser)
(ocamllex    cryptolineLexer)
(ocamlyacc   cryptolineParser)
(ocamllex    specLexer)
(ocamlyacc   specParser)
